# openspot-tui

./: .gitignore  .npmignore  004-production-grade-logging.md  AUTH_STATUS_IMPROVEMENTS.md  CHANGELOG.md  LICENSE  README.md  mpris-native.linux-x64-gnu.node  package-lock.json  package.json  tsconfig.json
mpris-native/: .gitignore  Cargo.toml  README.md  package.json
mpris-native/src/: controller.rs  error.rs  lib.rs  supervisor.rs  types.rs
scripts/: clean-test.sh
src/: app.ts  index.ts
src/commands/: buildCommands.ts  index.ts
src/components/: CommandPalette.ts  ContentWindow.ts  HelpModal.ts  NowPlaying.ts  Queue.ts  SearchBar.ts  Sidebar.ts  StatusBar.ts  StatusSidebar.ts  Toast.ts  ToastManager.ts  index.ts
src/config/: colors.ts  constants.ts  index.ts  logging.ts
src/container/: ServiceContainer.ts  index.ts  registration.ts  tokens.ts
src/controllers/: AuthenticationController.ts  ConnectionManager.ts  InputHandler.ts  MprisStateManager.ts  NavigationController.ts  PlaybackController.ts  index.ts
src/data/: mock.ts
src/events/: AppEvents.ts  EventEmitter.ts  index.ts
src/interfaces/: IAppLifecycle.ts  IAuthenticationController.ts  IConnectionManager.ts  IInputHandler.ts  IMprisStateManager.ts  INavigationController.ts  IPlaybackController.ts  index.ts
src/lifecycle/: AppLifecycle.ts  index.ts
src/managers/: InputHandler.ts  StateManager.ts  UIManager.ts  index.ts
src/schemas/: spotify.ts
src/scripts/: auth-test.ts  debug-mpris.ts  mpris-test.ts  native-test.ts  postinstall.ts  test-installer.ts
src/services/: AuthService.ts  index.ts  (+11 more)
(+13 files in other folders)
